--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -12,6 +12,11 @@
     state: absent
     remove: yes
 
+- name: update dist packages
+  apt:
+    update_cache: true
+    upgrade: full
+
 - name: install some basic packages
   apt: name={{item}} update_cache=true state=latest
   with_items:
