--- a/roles/postgres/vars/main.yml
+++ b/roles/postgres/vars/main.yml
@@ -2,4 +2,4 @@
 db_user: zaphod
 db_name: zaphod
 db_password: zaphod
-pg__etc_path: /etc/postgresql/9.4/main/pg_hba.conf
+pg_etc_path: /etc/postgresql/9.4/main/pg_hba.conf
