--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -14,6 +14,7 @@
 - name: install some basic packages
   apt: name={{item}} update_cache=true state=latest
   with_items:
+    - apt-transport-https
     - bash
     - openssl
     - libssl-dev
