--- a/roles/beats/tasks/main.yml
+++ b/roles/beats/tasks/main.yml
@@ -5,12 +5,11 @@
     dest: /opt/beats/
   tags: beats
 
-- name: install filebeat
-  apt:
-    deb: /opt/beats/filebeat_1.2.3_amd64.deb
-    state: present
-    force: yes
+- include: file.yml
   tags: beats
 
-- name: drop filebeat config
-  copy: filebeat.yml
+- include: packet.yml
+  tags: beats
+
+- include: top.yml
+  tags: beats
